<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<item
    android:id="@+id/home"
    android:icon="@drawable/ic_baseline_home_24"
    android:title="@string/home"
    app:showAsAction="collapseActionView"
    />
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        app:showAsAction="collapseActionView"
        />
    <item
        android:id="@+id/cart"
        android:icon="@drawable/ic_baseline_shopping_cart_24"
        android:title="@string/Cart"
        app:showAsAction="collapseActionView"
        />
    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/Profile"
        app:showAsAction="collapseActionView"
        />
</menu>