<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminAddNewProductActivity">

    <ImageView
        android:id="@+id/select_product_image"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:cropToPadding="false"
        android:scaleType="centerCrop"
        android:src="@drawable/select_product_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        />

    <EditText
        android:id="@+id/Nom_producto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/select_product_image"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="50dp"
        android:hint="@string/IngAdminNom"
        android:inputType="textMultiLine"
        android:padding="20dp"

        />

    <EditText
        android:id="@+id/Desc_producto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Nom_producto"
        android:inputType="textMultiLine"
        android:layout_marginTop="20dp"
        android:padding="20dp"
        android:hint="@string/IngAdminDesc"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"

        />

    <EditText
        android:id="@+id/Prec_producto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Desc_producto"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="50dp"
        android:hint="@string/IngAdminPrec"
        android:inputType="textMultiLine"
        android:padding="20dp"

        />

    <Button
        android:id="@+id/add_new_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Prec_producto"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="45dp"
        android:background="@color/black"
        android:padding="17dp"
        android:text="Añadir producto"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp" />

</RelativeLayout>